﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

ENGINE:
	- Fixed: Old passwords are still working even when they are updated (courier-authdaemon)

PLUGINS:
	- Added: __need_change__ field which ensure plugin change on plugin reactivation
	- Changed: The updatePluginList action is no longer automatically triggered when a plugin is uploaded
	- Fixed: db_schema_version info field which is used by some plugin must be persistent
	- Fixed: Plugin info are partially updated
	- Updated: Plugin API to version 0.2.6 (changes are backward compatible)

Tickets:
	- Fixed #1021: Bug - Some htusers are not added into the htgroup file

------------------------------------------------------------------------------------------------------------------------
1.1.1
------------------------------------------------------------------------------------------------------------------------

2014-02-16: Laurent Declercq
	- RELEASE i-MSCP 1.1.1

ADDONS:
	- Fixed: Awstats - Cron task is not running (dynamic mode)

CONFIGS:
	- Added: bash-completion package
	- Disabled: Opcache support (PHP5.5)

ENGINE:
	- Added: onLoadTemplate event in all server implementations
	- Fixed: DNS sub templates must be passed-in to event listeners
	- Fixed: Domain owner unique identifier must be passed-in to related servers and addons
	- Fixed: Missing CLEAR method in iMSCP::Config handler

GUI:
	- Fixed: jQuery library included twice in simple layout
	- Fixed: Ticket notification won't be delivered (Support ticket feature)
	- Fixed: Wrong download link for new release
	- Fixed: Wrong events triggered in client/profile.php
	- Updated: Datatable translations

PLUGINS:
	- Changed: iMSCP_Plugin_Manager::updatePluginInfo() method is now public
	- Fixed: Plugin Store link