@@ -3,7 +3,7 @@
         <alternative default="apache_php_fpm">
             <apache_fcgid>
                 <package>apache2</package>
-                <package>apache2-suexec-pristine</package>
+                <package>apache2-suexec-custom</package>
                 <package>libapache2-mod-fcgid</package>
                 <package>php5-cgi</package>
             </apache_fcgid>
@@ -14,7 +14,7 @@
             </apache_itk>
             <apache_php_fpm>
                 <package>apache2</package>
-                <package>apache2-suexec-pristine</package>
+                <package>apache2-suexec-custom</package>
                 <package>libapache2-mod-fastcgi</package>
                 <package>php5-fpm</package>
             </apache_php_fpm>
